# KMeans-Algo-Gui

./: CMakeLists.txt  Data_format.txt  README.md  UEM K-Means Clusterer.geany  build.sh  clean.sh  kmeans  main.cpp  output-data.txt
include/: Cluster.hpp  KMeans.hpp  KmeansGui.hpp  KmeansReader.hpp  Point.hpp
src/: Cluster.cpp  KMeans.cpp  KmeansGui.cpp  KmeansReader.cpp  Point.cpp
